--- a/styles.css
+++ b/styles.css
@@ -673,3 +673,10 @@ footer ul li a:hover{
     }
 
 }
+
+@media screen and (max-width: 400px) {
+    .categories-right{
+        grid-template-columns: repeat(1, 1fr);
+        gap: 4.32rem;
+    }
+}
